Add form and button style

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </form>
             </div>
             <div class="buttons">
-                <input type="submit" form="myform" value="Create Account">
-                <p>Already have an account? <a href="">Log in</a></p>
+                <input class="create-acc" type="submit" form="myform" value="Create Account">
+                <p>Already have an account? <a class="login" href="">Log in</a></p>
             </div>
         </div>
     </div>
