Add error class to password inputs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <input type="email" name="user_mail" id="user_mail">
                             <br>
                             <label for="user_password">PASSWORD</label><br>
-                            <input type="password" name="user_password" id="user_password">
+                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" ">
                         </div>
                         <div class="second-column">
                             <label for="last_name">LAST NAME</label><br>
@@ -46,7 +46,7 @@
                             <input type="number" name="user_phone" id="user_phone">
                             <br>
                             <label for="user_password">CONFIRM PASSWORD</label><br>
-                            <input type="password" name="user_password" id="user_password">
+                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" ">
                         </div>
                     </div>
                 </form>
