Specify requirement on inputs

--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
                 <form id="myform" action="" method="get">
                     <div class="form-container">
                         <div class="first-column">
-                            <label for="first_name">FIRST NAME</label><br>
-                            <input type="text" name="first_name" id="first_name">
+                            <label for="first_name">FIRST NAME *</label><br>
+                            <input type="text" name="first_name" id="first_name" required>
                             <br>
-                            <label for="user_mail">EMAIL</label><br>
-                            <input type="email" name="user_mail" id="user_mail">
+                            <label for="user_mail">EMAIL *</label><br>
+                            <input type="email" name="user_mail" id="user_mail" required>
                             <br>
-                            <label for="user_password">PASSWORD</label><br>
-                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" ">
+                            <label for="user_password">PASSWORD *</label><br>
+                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" " required>
                         </div>
                         <div class="second-column">
-                            <label for="last_name">LAST NAME</label><br>
-                            <input type="text" name="last_name" id="last_name">
+                            <label for="last_name">LAST NAME *</label><br>
+                            <input type="text" name="last_name" id="last_name" required>
                             <br>
                             <label for="user_phone">PHONE NUMBER</label><br>
                             <input type="number" name="user_phone" id="user_phone">
                             <br>
-                            <label for="user_password">CONFIRM PASSWORD</label><br>
-                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" ">
+                            <label for="user_password">CONFIRM PASSWORD *</label><br>
+                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" " required>
                         </div>
                     </div>
                 </form>
