--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                             <label for="user_phone">PHONE NUMBER</label><br>
                             <input type="number" name="user_phone" id="user_phone">
                             <br>
-                            <label for="user_password">CONFIRM PASSWORD *</label><br>
-                            <input class="error" type="password" name="user_password" id="user_password" placeholder=" " required>
+                            <label for="confirm_password">CONFIRM PASSWORD *</label><br>
+                            <input class="error" type="password" name="confirm_password" id="confirm_password" placeholder=" " required>
                         </div>
                     </div>
                 </form>
@@ -57,6 +57,5 @@
             </div>
         </div>
     </div>
-    
 </body>
 </html>
